# freecad-scripts

./: .gitignore  README.md  pyproject.toml
examples/: part.FCStd
src/fcs/: apply_params.py  constants.py  extract-params.py  extract_params.py  spreadsheet.py  utils.py  varset.py
