[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fcs"
version = "0.0.0"
description = "FreeCAD Scripts"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = ["pint"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
